force-app/main/default/objects/DWProductPrices__c/DWProductPrices__c.object-meta.xml
<CustomObject>
    <label>DWProductPrices</label>
    <nameField>
        <label>DWProductPrices</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DWProductPrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>