force-app/main/default/objects/DWProductPrices__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <formula>END_DATE_NEW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End</label>
    <type>Date</type>
</CustomField>