force-app/main/default/objects/DWProductPrices__c/fields/END_DATE__c.field-meta.xml
<CustomField>
    <fullName>END_DATE__c</fullName>
    <label>End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>