force-app/main/default/objects/DWProductPrices__c/fields/END_DATE_NEW__c.field-meta.xml
<CustomField>
    <fullName>END_DATE_NEW__c</fullName>
    <label>END_DATE</label>
    <type>Date</type>
</CustomField>