force-app/main/default/objects/DWProductPrices__c/fields/LIMIT_1__c.field-meta.xml
<CustomField>
    <fullName>LIMIT_1__c</fullName>
    <label>Limit 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>