force-app/main/default/objects/DWProductPrices__c/fields/PRICE_1__c.field-meta.xml
<CustomField>
    <fullName>PRICE_1__c</fullName>
    <label>Price 1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>