force-app/main/default/objects/DWProductPrices__c/fields/PRICE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PRICE_TYPE__c</fullName>
    <label>Price Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>