force-app/main/default/objects/DWProductPrices__c/fields/PRODUCT__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT__c</fullName>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>