force-app/main/default/objects/DWProductPrices__c/fields/PRODUCT_FAMILY__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_FAMILY__c</fullName>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>