force-app/main/default/objects/DWProductPrices__c/fields/PRODUCT_KEY__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_KEY__c</fullName>
    <externalId>true</externalId>
    <label>PRODUCT_KEY</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>