force-app/main/default/objects/DWProductPrices__c/fields/PRODUCT_REF__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_REF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DWProduct</label>
    <referenceTo>DWProduct__c</referenceTo>
    <relationshipLabel>DWProductPrices</relationshipLabel>
    <relationshipName>DWProduct</relationshipName>
    <type>Lookup</type>
</CustomField>