force-app/main/default/objects/DWProductPrices__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <formula>START_DATE_NEW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start</label>
    <type>Date</type>
</CustomField>