force-app/main/default/objects/DWProductPrices__c/fields/START_DATE__c.field-meta.xml
<CustomField>
    <fullName>START_DATE__c</fullName>
    <label>Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>