force-app/main/default/objects/DWProductPrices__c/fields/START_DATE_NEW__c.field-meta.xml
<CustomField>
    <fullName>START_DATE_NEW__c</fullName>
    <label>START_DATE</label>
    <type>Date</type>
</CustomField>