force-app/main/default/objects/DWProductPrices__c/fields/Startee__c.field-meta.xml
<CustomField>
    <fullName>Startee__c</fullName>
    <formula>TEXT(Start__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Startee</label>
    <type>Text</type>
</CustomField>