force-app/main/default/objects/DWProductPrices__c/fields/SUPPLIER__c.field-meta.xml
<CustomField>
    <fullName>SUPPLIER__c</fullName>
    <label>Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>