force-app/main/default/objects/DWProductPrices__c/fields/TYPE_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>TYPE_DESCRIPTION__c</fullName>
    <label>Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>