force-app/main/default/objects/DWProductPrices__c/fields/UOM_ISSUE__c.field-meta.xml
<CustomField>
    <fullName>UOM_ISSUE__c</fullName>
    <label>UOM Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>