force-app/main/default/objects/DWProductPrices__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PRODUCT__c</columns>
    <columns>ITEM__c</columns>
    <columns>UOM_ISSUE__c</columns>
    <columns>TYPE__c</columns>
    <columns>SUPPLIER__c</columns>
    <columns>PRODUCT_FAMILY__c</columns>
    <columns>isActive__c</columns>
    <columns>PRICE_TYPE__c</columns>
    <columns>TYPE_DESCRIPTION__c</columns>
    <columns>START_DATE__c</columns>
    <columns>END_DATE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>